Fixed Navbar, Finished Setup (w constraints), Started Dark Mode Feature (setting.tsx), Added Footer Component

--- a/Assignment2/frontend/src/styles.css
+++ b/Assignment2/frontend/src/styles.css
@@ -6,11 +6,15 @@ body {
     margin: 0; /* Remove default body margin */
     padding: 0; /* Remove default body padding */
     font-family: 'Kanit', sans-serif;
+    overflow: hidden;
   }
+
 
 /* Home Page */
 .home-background {
     background: linear-gradient(to bottom, #1A936F, #76C991); 
+    height: 100vh; /* Set height to 100% of the viewport height */
+
 }
 
 .Home {
@@ -67,6 +71,16 @@ body {
 .Settings {
     color: #FFFFFF;
     text-align: center;
+}
+
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-button {
+    background-color: #333;
+    border-color: #333;
 }
 
 /* Navbar */
